--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.png">
+
     <meta charset="UTF-8">
     <title>PadelStats</title>
 </head>
